--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -1,17 +1,18 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>落尘社区</title>
+    <title>发布</title>
 
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="../static/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../static/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="../static/css/community.css"/>
+
     <script src="../static/js/jquery.min.js" type="application/javascript"></script>
     <script src="../static/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default ">
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -47,30 +48,47 @@
     </div>
 </nav>
 
-<div class="container-fluid" id="div_1">
-    <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h3><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 发现</h3>
-            <hr>
-            <div class="media" th:each="question : ${questionList}">
-                <div class="media-left">
-                    <a href="#">
-                        <img class="media-object img-circle" th:src="${question.user.avatarUrl}">
-                    </a>
-                </div>
-                <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span th:text="${question.description}"></span> <br>
-                   <span class="text_desc"> <span th:text="${question.commentCount}"></span> 个回复 ●
-                       <span th:text="${question.viewCount}"></span> 次浏览 ● <span th:text="${#dates.format(question.gmtCreate,'dd MMMM yyyy')}"></span></span>
-                </div>
+    <div class="container-fluid" id="div_1">
+        <div class="row">
+            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                <h3><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 发起</h3>
+                <hr>
+
+                <form action="/publish" method="post">
+                    <div class="form-group">
+                        <label for="title">问题标题 (简单扼要)</label>
+                        <input type="text" class="form-control" name="title" id="title" th:value="${title}" placeholder="问题标题...">
+                    </div>
+                    <div class="form-group">
+                        <label for="description">问题补充 (必填,请参照右侧提示):</label>
+                        <textarea class="form-control" name="description" id="description" rows="10" th:text="${description}"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="tag">添加标签:</label>
+                        <input type="text" class="form-control" name="tag" id="tag" th:value="${tag}" placeholder="输入标签以，号隔开">
+                    </div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <li th:if="${error}!=null">
+                                <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12" th:text="${error}"></div>
+                            </li>
+
+                            <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                                <button type="submit" class="btn btn-success btn-publish">发起</button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                <h3>问题发起指南</h3>
+                ● 问题标题: 请用精简的语言描述您发布的问题,不超过25字  <br/>
+                ● 问题补充: 详细补充您的问题,并确保问题描述清晰直观,并提供一些相关资料:<br/>
+                ● 选择标签: 选择一个或者多个合适的标签,用逗号隔开,每个不超过10个字<br/>
             </div>
         </div>
-
-        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
-        </div>
     </div>
-</div>
+
 </body>
 </html>
