--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -12,43 +12,9 @@
     <script src="../static/js/bootstrap.min.js" type="application/javascript"></script>
 </head>
 <body>
-<nav class="navbar navbar-default ">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">落尘社区</span>
-            </button>
-            <a class="navbar-brand" href="/">落尘社区</a>
-        </div>
+<div th:insert="~{navigation :: nav}"></div>
 
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <form class="navbar-form navbar-left">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="搜索问题">
-                </div>
-                <button type="submit" class="btn btn-default">搜索</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right">
-                <li th:if="${session.user!=null}">
-                    <a href="/publish">发布</a>
-                </li>
-                <li class="dropdown" th:if="${session.user!=null}">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">消息中心</a></li>
-                        <li><a href="#">个人资料</a></li>
-                        <li><a href="#">退出登录</a></li>
-                    </ul>
-                </li>
-                <li th:if="${session.user==null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=5eb6bc4348f2f4d9f56f&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-
-    <div class="container-fluid" id="div_1">
+<div class="container-fluid" id="div_1">
         <div class="row">
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
                 <h3><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 发起</h3>
@@ -89,6 +55,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
