--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -17,7 +17,7 @@
 <div class="container-fluid" id="div_1">
         <div class="row">
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                <h3><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 发起</h3>
+                <h3><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> 发起</h3>
                 <hr>
 
                 <form action="/publish" method="post">
