--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -17,6 +17,9 @@ body{
     height: 40px;
     width: 40px;
 }
+.media-body {
+    padding-top: 10px;
+}
 
 .text_desc{
     font-size: 12px;
@@ -28,11 +31,73 @@ body{
     margin-top: 14px;
 }
 
+.question-title{
+    margin-top: 25px;
+}
+
 .community-menu{
     color: #999999;
     font-size: 13px;
+    display: block;
+    margin-bottom: 15px
 }
 
 .jumbotro{
     margin : 50px;
+}
+
+.comment{
+    margin:10px 0;
+}
+
+.btn-comment{
+    float: right;
+    margin-bottom: 10px;
+}
+
+.comments{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+
+.sub-comments{
+    border-radius: 5px;
+    margin-top: 10px;
+    border: 1px solid #eeeeee;
+    padding-top: 15px;
+    margin-bottom: 15px;
+}
+
+.sub-comments .btn{
+    margin: 10px 0;
+}
+
+.comment_sp{
+    margin-top: 0;
+}
+
+.menu{
+    color: #999;
+    margin-top: 5px;
+}
+
+.menu .icon{
+    margin-right: 10px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .active{
+    color: #499ef3;
+}
+.menu .icon:hover {
+    color: #499ef3;
+}
+.menu .comment-icon {
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.menu .comment-icon:hover{
+    color: #499ef3;
 }
