增加搜索功能

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -44,7 +44,10 @@
                             path   : "../static/js/lib/",
                             delay  :  0,
                             watch  :  false,
-                            placeholder : "请输入问题描述"
+                            placeholder : "请输入问题描述",
+                            imageUpload : true,
+                            imageFormats:["jpg","jpeg","gif","png","bmp","webp"],
+                            imageUploadURL :"/file/upload",
                         });
                     });
                 </script>
@@ -97,5 +100,7 @@
         </div>
     </div>
 </div>
+
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
