--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -145,13 +145,13 @@
                     <div class="media">
                         <div class="media-left">
                             <a href="#">
-                                <img class="media-object img-rounded" th:src="${question.user.getAvatarUrl()}">
+                                <img class="media-object img-rounded" th:src="${session.user != null ? session.user.getAvatarUrl() : '/static/image/default-avatar.png'}">
                             </a>
                         </div>
 
                         <div class="media-body">
                             <h5 class="media-heading">
-                                <span th:text="${question.user.name}"></span>
+                                <span th:text="${session.user != null ? session.user.name : '匿名用户'}"></span>
                             </h5>
                         </div>
                     </div>
@@ -203,6 +203,7 @@
         </div>
     </div>
 </div>
+<div th:insert="~{footer :: foot}"></div>
 </body>
 </html>
 
