--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -43,7 +43,7 @@
                         </ul>
                     </li>
                     <li th:if="${session.user==null}">
-                        <a href="https://github.com/login/oauth/authorize?client_id=5eb6bc4348f2f4d9f56f&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                        <a th:href="@{https://github.com/login/oauth/authorize(client_id='5eb6bc4348f2f4d9f56f',redirect_uri=${#httpServletRequest.getRequestURI()+'callback'},scope='user',state='1' )}">登录</a>
                     </li>
                 </ul>
             </div>
